Fixed image on mobile screen

--- a/stylesheets/page6main.scss
+++ b/stylesheets/page6main.scss
@@ -10,6 +10,10 @@ $large: 1199px;
     background-color: #f2f2f2;
     padding-top: 40px;
     padding-bottom: 100px;
+    
+    @media screen and (max-width: $xsmall){
+        padding-top: 0;
+    }
         #formCont{
             padding-top: 40px;
             h1{
@@ -35,9 +39,7 @@ $large: 1199px;
         #imgCont{
             padding-top: 40px;
             padding-left: 80px;
-            img{
-                height: 400px;
-            }
+            
             #firstLabel{
                 margin-top: 30px;
             }
@@ -47,6 +49,14 @@ $large: 1199px;
             @media screen and (max-width: $large){
                 padding-left: 50px;
                 padding-right: 60px;
+            }
+            @media screen and (max-width: $xsmall){
+                .labelinfo{
+                    padding: 0 20px;
+                }
+                padding-left: 0;
+                padding-right: 0;
+                padding-top: 0;
             }
             
         }
